# GinkgoOS

./: Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  build.rs  limine.conf  linker.ld  rust-toolchain.toml
.cargo/: config.toml
crates/ginkgo-app-package/: Cargo.toml
crates/ginkgo-app-package/src/: lib.rs  package.rs  registry.rs  sha256.rs  validation.rs
crates/ginkgo-desktop/: Cargo.toml
crates/ginkgo-desktop/src/: lib.rs  runtime.rs
crates/ginkgo-filesystem/: Cargo.toml  build.rs
crates/ginkgo-filesystem/src/: lib.rs
crates/ginkgo-fonts/: Cargo.toml
crates/ginkgo-fonts/src/: gkf.rs  lib.rs  tests.rs
crates/ginkgo-graphics/: Cargo.toml
crates/ginkgo-graphics/src/: lib.rs
crates/ginkgo-hid/: Cargo.toml
crates/ginkgo-hid/src/: lib.rs
crates/ginkgo-ipc/: Cargo.toml
crates/ginkgo-ipc/src/: kernel.rs  lib.rs
crates/ginkgo-kernel/: Cargo.toml  build.rs
crates/ginkgo-kernel/src/: address_space.rs  ahci.rs  arch.rs  ata.rs  audio.rs  block.rs  compositor.rs  crt.rs  desktop_runtime.rs  elf.rs  entropy.rs  framebuffer.rs  heap.rs  heap_support.rs  input.rs  lib.rs  limine.rs  local_apic.rs  main.rs  memory.rs  paging.rs  pci.rs  power.rs  process.rs  shared_memory.rs  syscall.rs  task.rs  trust.rs  usb.rs  virtio_blk.rs
crates/ginkgo-program-registry/: Cargo.toml
crates/ginkgo-program-registry/src/: lib.rs
crates/ginkgo-rhai-preprocessor/: Cargo.toml
crates/ginkgo-rhai-preprocessor/src/: lib.rs
crates/ginkgo-scroll-layout/: Cargo.toml
crates/ginkgo-scroll-layout/src/: lib.rs
crates/ginkgo-sysapi/: Cargo.toml
crates/ginkgo-sysapi/src/: lib.rs
crates/ginkgo-terminal-protocol/: Cargo.toml
crates/ginkgo-terminal-protocol/src/: lib.rs
crates/ginkgo-text-editor-core/: Cargo.toml
crates/ginkgo-text-editor-core/src/: lib.rs
crates/ginkgo-userspace/: Cargo.toml
crates/ginkgo-userspace/src/: lib.rs  window_transport.rs
crates/ginkgo-window/: Cargo.toml
crates/ginkgo-window/src/: channel.rs  client.rs  geometry.rs  lib.rs  protocol.rs
docs/: memory.md
src/: crt.rs  font8x8.rs  framebuffer.rs  fs.rs  heap.rs  hid.rs  input.rs  io.rs  lib.rs  limine.rs  main.rs  memory.rs  paging.rs  pci.rs  task.rs  usb.rs
tools/: create_gpt_disk.py  qemu_filesystem_hierarchy_test.py  qemu_frame_reclaim_test.py  qemu_memory_policy_test.py  qemu_power_test.py  qemu_process_capability_test.py  qemu_text_editor_test.py  qemu_usb_hotplug_test.py
userspace/: .gitignore  Cargo.toml  README.md
userspace/.cargo/: config.toml
userspace/ginkgo-desktop-service/: Cargo.toml  build.rs
userspace/ginkgo-desktop-service/src/: main.rs
userspace/ginkgo-file-navigator/: Cargo.toml  build.rs
userspace/ginkgo-file-navigator/src/: main.rs
userspace/ginkgo-minimal-client/: Cargo.toml  build.rs
userspace/ginkgo-minimal-client/src/: main.rs
userspace/ginkgo-process-capability-smoke/: Cargo.toml  build.rs
userspace/ginkgo-process-capability-smoke/src/: main.rs
userspace/ginkgo-runtime/: Cargo.toml  build_support.rs  linker.ld
userspace/ginkgo-runtime/src/: lib.rs
userspace/ginkgo-terminal/: Cargo.toml  build.rs
userspace/ginkgo-terminal/src/: keyboard.rs  main.rs  shell.rs  transport.rs
userspace/ginkgo-text-editor/: Cargo.toml  build.rs
userspace/ginkgo-text-editor/src/: main.rs
userspace/validator/: Cargo.toml
userspace/validator/src/: main.rs
