[package]
name = "ginkgo-os"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bitflags = { version = "2.13.1", default-features = false }
embedded-graphics = { version = "0.8.2", default-features = false }
profont = "0.7.0"
redoxfs = { path = "vendor/redoxfs", default-features = false }
spinning_top = "0.3"
syscall = { package = "redox_syscall", version = "0.9.0", default-features = false }
talc = "5.0.4"
uart_16550 = { version = "0.6.0", default-features = false }
volatile = { version = "0.6.1", default-features = false }
x86_64 = { version = "0.15.5", default-features = false, features = ["instructions"] }

[build-dependencies]
redoxfs = { path = "vendor/redoxfs", default-features = false }
syscall = { package = "redox_syscall", version = "0.9.0" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 2
strip = false
