[workspace]
members = [
    "crates/ginkgo-kernel",
    "crates/ginkgo-userspace",
    "crates/ginkgo-ipc",
    "crates/ginkgo-hid",
    "crates/ginkgo-filesystem",
    "crates/ginkgo-graphics",
    "crates/ginkgo-sysapi",
]
default-members = ["crates/ginkgo-kernel"]
exclude = ["vendor/redoxfs"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[workspace.dependencies]
bitflags = { version = "2.13.1", default-features = false }
embedded-graphics = { version = "0.8.2", default-features = false }
postcard = { version = "1.1", default-features = false, features = ["alloc"] }
profont = "0.7.0"
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
spinning_top = "0.3"
talc = "5.0.4"
uart_16550 = { version = "0.6.0", default-features = false }
volatile = { version = "0.6.1", default-features = false }
x86_64 = { version = "0.15.5", default-features = false, features = ["instructions"] }
zerocopy = { version = "0.8", default-features = false, features = ["derive"] }

ginkgo-filesystem = { path = "crates/ginkgo-filesystem" }
ginkgo-graphics = { path = "crates/ginkgo-graphics" }
ginkgo-hid = { path = "crates/ginkgo-hid" }
ginkgo-ipc = { path = "crates/ginkgo-ipc", default-features = false }
ginkgo-sysapi = { path = "crates/ginkgo-sysapi" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 2
strip = false
