[workspace]
members = [
    "crates/ginkgo-kernel",
    "crates/ginkgo-userspace",
    "crates/ginkgo-ipc",
    "crates/ginkgo-app-package",
    "crates/ginkgo-program-registry",
    "crates/ginkgo-hid",
    "crates/ginkgo-filesystem",
    "crates/ginkgo-graphics",
    "crates/ginkgo-sysapi",
    "crates/ginkgo-terminal-protocol",
    "crates/ginkgo-text-editor-core",
    "crates/ginkgo-window",
    "crates/ginkgo-fonts",
    "crates/ginkgo-scroll-layout",
    "crates/ginkgo-desktop",
]
default-members = ["crates/ginkgo-kernel"]
exclude = ["vendor/redoxfs"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[workspace.dependencies]
bitflags = { version = "2.13.1", default-features = false }
embedded-graphics = { version = "0.8.2", default-features = false }
embedded-icon = { version = "0.0.1", default-features = false, features = ["24px", "mdi"] }
postcard = { version = "1.1", default-features = false, features = ["alloc"] }
profont = "0.7.0"
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
spinning_top = "0.3"
talc = "5.0.4"
uart_16550 = { version = "0.6.0", default-features = false }
volatile = { version = "0.6.1", default-features = false }
x86_64 = { version = "0.15.5", default-features = false, features = ["instructions"] }
zerocopy = { version = "0.8", default-features = false, features = ["derive"] }

ginkgo-desktop = { path = "crates/ginkgo-desktop" }
ginkgo-filesystem = { path = "crates/ginkgo-filesystem" }
ginkgo-fonts = { path = "crates/ginkgo-fonts" }
ginkgo-graphics = { path = "crates/ginkgo-graphics" }
ginkgo-hid = { path = "crates/ginkgo-hid" }
ginkgo-ipc = { path = "crates/ginkgo-ipc", default-features = false }
ginkgo-program-registry = { path = "crates/ginkgo-program-registry" }
ginkgo-scroll-layout = { path = "crates/ginkgo-scroll-layout" }
ginkgo-sysapi = { path = "crates/ginkgo-sysapi" }
ginkgo-terminal-protocol = { path = "crates/ginkgo-terminal-protocol" }
ginkgo-text-editor-core = { path = "crates/ginkgo-text-editor-core" }
ginkgo-window = { path = "crates/ginkgo-window" }

[profile.dev]
panic = "abort"
opt-level = 2

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 2
strip = false
