[workspace]
members = [
    "ginkgo-runtime",
    "ginkgo-desktop-service",
    "ginkgo-minimal-client",
    "ginkgo-file-navigator",
    "ginkgo-text-editor",
    "ginkgo-terminal",
    "ginkgo-process-capability-smoke",
]
exclude = ["validator"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[workspace.dependencies]
ginkgo-app-package = { path = "../crates/ginkgo-app-package" }
ginkgo-desktop = { path = "../crates/ginkgo-desktop" }
ginkgo-graphics = { path = "../crates/ginkgo-graphics" }
ginkgo-runtime = { path = "ginkgo-runtime" }
ginkgo-rhai-preprocessor = { path = "../crates/ginkgo-rhai-preprocessor" }
ginkgo-terminal-protocol = { path = "../crates/ginkgo-terminal-protocol" }
ginkgo-text-editor-core = { path = "../crates/ginkgo-text-editor-core" }
ginkgo-userspace = { path = "../crates/ginkgo-userspace" }
ginkgo-window = { path = "../crates/ginkgo-window" }
rhai = { version = "1.25.1", default-features = false, features = ["no_std"] }
spinning_top = "0.3"
talc = "5.0.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 2
strip = "symbols"
