[package]
name = "ginkgo-filesystem"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
redoxfs = { path = "../../vendor/redoxfs", default-features = false }
syscall = { package = "redox_syscall", version = "0.9.0", default-features = false }

[build-dependencies]
redoxfs = { path = "../../vendor/redoxfs" }
syscall = { package = "redox_syscall", version = "0.9.0" }
