[package]
name = "ginkgo-kernel"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
build = "build.rs"

[lib]
path = "src/lib.rs"

[[bin]]
name = "ginkgo-os"
path = "src/main.rs"
test = false
bench = false

[dependencies]
bitflags.workspace = true
embedded-graphics.workspace = true
embedded-icon.workspace = true
ginkgo-desktop.workspace = true
ginkgo-filesystem.workspace = true
ginkgo-graphics.workspace = true
ginkgo-hid.workspace = true
ginkgo-ipc = { workspace = true, features = ["kernel"] }
ginkgo-program-registry.workspace = true
ginkgo-sysapi.workspace = true
ginkgo-window.workspace = true
redoxfs = { path = "../../vendor/redoxfs", default-features = false }
syscall = { package = "redox_syscall", version = "0.9.0", default-features = false }
spinning_top.workspace = true
talc.workspace = true
uart_16550.workspace = true
volatile.workspace = true
x86_64.workspace = true

[build-dependencies]
ginkgo-program-registry = { workspace = true, features = ["host"] }
png = "0.17.16"
