[package]
name = "ginkgo-kernel"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
build = "build.rs"

[lib]
path = "src/lib.rs"

[[bin]]
name = "ginkgo-os"
path = "src/main.rs"
test = false
bench = false

[dependencies]
acpi = "6.1.1"
bitflags.workspace = true
embedded-graphics.workspace = true
embedded-icon.workspace = true
ginkgo-desktop.workspace = true
ginkgo-filesystem.workspace = true
ginkgo-graphics.workspace = true
ginkgo-hid.workspace = true
ginkgo-ipc = { workspace = true, features = ["kernel"] }
ginkgo-program-registry.workspace = true
ginkgo-sysapi.workspace = true
ginkgo-window.workspace = true
redoxfs = { path = "../../vendor/redoxfs", default-features = false }
syscall = { package = "redox_syscall", version = "0.9.0", default-features = false }
spinning_top.workspace = true
talc = { workspace = true, features = ["counters"] }
uart_16550.workspace = true
volatile.workspace = true
x86_64.workspace = true
zerocopy.workspace = true
rand_chacha = { version = "0.3.1", default-features = false }
rand_core = { version = "0.6.4", default-features = false }
sha2 = { version = "0.10.9", default-features = false }
ed25519-dalek = { version = "2.2.0", default-features = false }

[build-dependencies]
ed25519-dalek = "2.2.0"
ginkgo-program-registry = { workspace = true, features = ["host"] }
png = "0.17.16"
sha2 = "0.10.9"
