[package]
name = "ginkgo-window"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
ginkgo-graphics.workspace = true
ginkgo-ipc = { workspace = true, default-features = false }
postcard.workspace = true
serde.workspace = true
