[package]
name = "ginkgo-desktop-service"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "ginkgo-desktop-service"
path = "src/main.rs"

[dependencies]
ginkgo-desktop.workspace = true
ginkgo-runtime.workspace = true
ginkgo-userspace.workspace = true
ginkgo-window.workspace = true
