[package]
name = "ginkgo-file-navigator"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "ginkgo-file-navigator"
path = "src/main.rs"

[dependencies]
ginkgo-terminal-protocol.workspace = true

ginkgo-graphics.workspace = true

ginkgo-runtime.workspace = true
ginkgo-userspace.workspace = true
ginkgo-window.workspace = true
