[package]
name = "ginkgo-minimal-client"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "ginkgo-minimal-client"
path = "src/main.rs"

[dependencies]
ginkgo-graphics.workspace = true
ginkgo-runtime.workspace = true
ginkgo-userspace.workspace = true
ginkgo-window.workspace = true
