[package]
name = "ginkgo-process-capability-smoke"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "ginkgo-process-capability-smoke"
path = "src/main.rs"

[dependencies]
ginkgo-runtime.workspace = true
ginkgo-userspace.workspace = true
