[package]
name = "ginkgo-terminal"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "ginkgo-terminal"
path = "src/main.rs"

[dependencies]
ginkgo-app-package.workspace = true
ginkgo-terminal-protocol.workspace = true
ginkgo-graphics.workspace = true
ginkgo-runtime.workspace = true
ginkgo-userspace.workspace = true
ginkgo-window.workspace = true
rhai.workspace = true
