[package]
name = "ginkgo-text-editor"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "ginkgo-text-editor"
path = "src/main.rs"

[dependencies]
ginkgo-graphics.workspace = true
ginkgo-runtime.workspace = true
ginkgo-terminal-protocol.workspace = true
ginkgo-text-editor-core.workspace = true
ginkgo-userspace.workspace = true
ginkgo-window.workspace = true
